--- a/ClientShell/MainWindow.xaml
+++ b/ClientShell/MainWindow.xaml
@@ -22,7 +22,17 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Button Grid.Column="1" Content="Execute" Command="{Binding ExecuteCommand}" CommandParameter="{Binding ElementName=listView,Path=SelectedItem}" IsEnabled="{Binding CanExecuteWork}"/>
+        <Grid Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Button Content="Execute" Command="{Binding ExecuteCommand}" CommandParameter="{Binding ElementName=listView,Path=SelectedItem}" IsEnabled="{Binding CanExecuteWork}"/>
+            <Button Grid.Column="1" Content="Auto" Command="{Binding LoopCommand}"/>
+        </Grid>
         <StackPanel Grid.Row="1" Grid.Column="1" DataContext="{Binding ElementName=listView,Path=SelectedItem}">
             <TextBlock Text="{Binding Name}"/>
             <TextBlock Text="{Binding Name}"/>
